--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Basic Information 
-title: Kathleen Morrill-Pirovich
+title: Kathleen Morrill-Pirovich, PhD
 position: Senior Scientist in Genome Analysis
 affiliation: Colossal Biosciences
 email: kathleen.m.morrill (at) gmail.com
