--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # Basic Information 
-title: Kathleen Morrill-Pirovich, PhD
+title: Kathleen Morrill Pirovich, PhD
 position: Senior Scientist in Genome Analysis
 affiliation: Colossal Biosciences
 email: kathleen.m.morrill (at) gmail.com
 
 # Search Engine Optimization (SEO)
 # The following information is used to improve the website traffic from search engines, e.g., Google.
-keywords: genomics, bioinformatics, computational biology, evolutionary biology, scientific illustration
+keywords: genomics, bioinformatics, computational biology, evolutionary biology, scientific illustration, gene editing, genome engineering
 description: The personal homepage of Kathleen Morrill-Pirovich, PhD
 canonical: https://tabbzi.github.io
 
