--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Basic Information 
 title: Kathleen Morrill Pirovich, PhD
-position: Associated Species Lead; Senior Scientist in Computational Biology and Genome Analysis
+position: Associate Lead | Computational Biology | Genome Analysis
 affiliation: Colossal Biosciences
 email: kathleen.m.morrill (at) gmail.com
 
