--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,22 +1,57 @@
 main:
 
-  - title: xxx
-    authors: xxx
-    conference_short: xxx
-    conference: xxx
-    pdf: xxx
-    code: xxx
-    bibtex: xxx
-    image: ./assets/img/placeholder.jpg
-    notes: xxx
+  - title: Ancestry-inclusive dog genomics challenges popular breed stereotypes
+    authors: <strong>Morrill K</strong>, Hekman J, Li X, McClure J, Logan B, Goodman L, Gao M, Dong Y, Alonso M, Carmichael E, Snyder-Mackler N, Alonso J, Noh HJ, Johnson J, Koltookian M, Lieu C, Megquier K, Swofford R, Turner-Maier J, White ME, Weng Z, Colubri A, Genereux DP, Lord KA, Karlsson EK
+    code: https://www.science.org/doi/10.1126/science.abk0639
+    notes: 2022
+    image: ./assets/img/science.2022.376.issue-6592.largecover.jpg
 
-  - title: yyy
-    authors: <strong>me</strong>, yyy
-    conference_short: yyy
-    conference: yyy
-    pdf: yyy
-    code: yyy
-    page: yyy
-    bibtex: yyy
-    notes: yyy
-    image: ./assets/img/placeholder.jpg
+  # - title: yyy
+  #   authors: <strong>me</strong>, yyy
+  #   conference_short: yyy
+  #   conference: yyy
+  #   pdf: yyy
+  #   code: yyy
+  #   page: yyy
+  #   bibtex: yyy
+  #   notes: yyy
+  #   image: ./assets/img/placeholder.jpg
+
+  - title: Elements in the λ immunity region regulate phage development: beyond the ‘Genetic Switch’
+    authors: Thomason LC, <strong>Morrill K</strong>, Murray G, Court C, Shafer B, Schneider TD, Court DL
+    code: https://onlinelibrary.wiley.com/doi/10.1111/mmi.14394
+    notes: 2019
+    image: ./assets/img/pic02.jpg
+
+  # - title: yyy
+  #   authors: <strong>me</strong>, yyy
+  #   conference_short: yyy
+  #   conference: yyy
+  #   pdf: yyy
+  #   code: yyy
+  #   page: yyy
+  #   bibtex: yyy
+  #   notes: yyy
+  #   image: ./assets/img/placeholder.jpg
+
+  # - title: yyy
+  #   authors: <strong>me</strong>, yyy
+  #   conference_short: yyy
+  #   conference: yyy
+  #   pdf: yyy
+  #   code: yyy
+  #   page: yyy
+  #   bibtex: yyy
+  #   notes: yyy
+  #   image: ./assets/img/placeholder.jpg
+
+  # - title: yyy
+  #   authors: <strong>me</strong>, yyy
+  #   conference_short: yyy
+  #   conference: yyy
+  #   pdf: yyy
+  #   code: yyy
+  #   page: yyy
+  #   bibtex: yyy
+  #   notes: yyy
+  #   image: ./assets/img/placeholder.jpg
