--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -2,20 +2,17 @@ main:
 
   - title: ​Comparative genomics of Balto, a famous historic dog, captures lost diversity of 1920s sled dogs
     authors: Moon KL, Huson HJ, <strong>Morrill K</strong>, Wang MS, Li X, Srikanth K; Zoonomia Consortium; Lindblad-Toh K, Svenson GJ, Karlsson EK, Shapiro B
-    code: https://doi.org/10.1126/science.abn5887
-    notes: 2023
+    pdf: https://doi.org/10.1126/science.abn5887
     image: ./assets/img/balto.png
 
   - title: Ancestry-inclusive dog genomics challenges popular breed stereotypes
     authors: <strong>Morrill K</strong>, Hekman J, Li X, McClure J, Logan B, Goodman L, Gao M, Dong Y, Alonso M, Carmichael E, Snyder-Mackler N, Alonso J, Noh HJ, Johnson J, Koltookian M, Lieu C, Megquier K, Swofford R, Turner-Maier J, White ME, Weng Z, Colubri A, Genereux DP, Lord KA, Karlsson EK
-    code: https://www.science.org/doi/10.1126/science.abk0639
-    notes: 2022
+    pdf: https://www.science.org/doi/10.1126/science.abk0639
     image: ./assets/img/science.2022.376.issue-6592.largecover.jpg
 
   - title: "Elements in the λ immunity region regulate phage development: beyond the ‘Genetic Switch’"
     authors: Thomason LC, <strong>Morrill K</strong>, Murray G, Court C, Shafer B, Schneider TD, Court DL
-    code: https://onlinelibrary.wiley.com/doi/10.1111/mmi.14394
-    notes: 2019
+    pdf: https://onlinelibrary.wiley.com/doi/10.1111/mmi.14394
     image: ./assets/img/pic02.jpg
 
 
